--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -241,6 +241,9 @@ if(NETWORKIT_PYTHON)
 	target_include_directories(_NetworKit BEFORE PUBLIC "${PROJECT_SOURCE_DIR}/include")
 	target_include_directories(_NetworKit PRIVATE "${PROJECT_SOURCE_DIR}/extlibs/ttmath/")
 	target_include_directories(_NetworKit PRIVATE "${NETWORKIT_PYTHON}")
+	if(NUMPY_INCLUDE_DIR)
+		target_include_directories(_NetworKit PRIVATE "${NUMPY_INCLUDE_DIR}")
+	endif()
 
 	if(NOT NETWORKIT_BUILD_CORE)
 		if(NOT EXTERNAL_NETWORKIT_CORE)
